--- a/JobPortal/front-end/src/css/profilecreation.module.css
+++ b/JobPortal/front-end/src/css/profilecreation.module.css
@@ -22,6 +22,14 @@
     max-width: 1168px;
     padding: 32px;
   }
+ 
+  .logoImage {
+    aspect-ratio: 1.;
+    object-fit: contain;
+    object-position: center;
+    width: 45px;
+    margin-right: 10px;
+  }
   
   .pageTitle {
     color: #25324b;
@@ -81,6 +89,7 @@
     font-weight: 600;
     line-height: 1.6;
     text-align: center;
+    padding:10px;
   }
   
   .activeIndicator {
@@ -103,7 +112,7 @@
     background-color: #d6ddeb;
     border: none;
     height: 1px;
-    margin: 24px 0;
+    margin: 15px 0;
     width: 100%;
   }
   
@@ -119,6 +128,7 @@
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 4px;
+    padding-bottom: 20px;
   }
   
   .sectionDescription {
@@ -216,7 +226,7 @@
   .personalDetails,
   .workExperience,
   .skills {
-    margin-top: 24px;
+    margin-top: 5px;
   }
   
   .detailsForm,
